# 4stuck

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test.db
.github/workflows/: ci.yml
backend/: README.md  openapi_schema.json  requirements-dev.txt  requirements.txt  test.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: game.py  puzzle.py  team.py  ws.py
backend/app/schemas/: __init__.py
backend/app/schemas/v1/: __init__.py
backend/app/schemas/v1/api/: __init__.py  requests.py  responses.py
backend/app/schemas/v1/core/: __init__.py  communication.py  game.py  player.py  puzzle.py
backend/app/schemas/v1/websocket/: __init__.py  messages.py
backend/app/services/: __init__.py  color_assignment_service.py  countdown_service.py  game_end_service.py
backend/app/utils/: websocket_broadcast.py
backend/tests/: conftest.py  test_color_assignment_service.py  test_countdown_service.py  test_game_api.py  test_game_end_service.py  test_puzzle_api.py  test_spatial_puzzle_next_task.py  test_team_api.py  test_ws_api.py
docs/: TODO.md  development-plan-current-state.md  development-plan.md  development-workflow.md  forvarsmakten-game-detailed.md  game-description.md  project-completion-summary.md  puzzle-system.md  quick-reference.md  schema-architecture.md  workflow.md
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  GameSessionDemo.tsx  api-types.ts  main.tsx  setupTests.ts
frontend/src/api/: index.ts
frontend/src/api/models/: AssignColorRequest.ts  AvailableColorsResponse.ts  AvailableTeam.ts  AvailableTeamOut.ts  ColorAssignmentRequest.ts  ColorAssignmentResponse.ts  ColorConflictResolutionResponse.ts  GameSessionCreate.ts  GameSessionOut.ts  GameSessionResponse.ts  GameSessionStateUpdate.ts  PlayerPoints.ts  PuzzleAnswer.ts  PuzzleAnswerResponse.ts  PuzzleCreate.ts  PuzzleResult.ts  PuzzleState.ts  PuzzleStateResponse.ts  TeamColorValidationResponse.ts  TeamCreate.ts  TeamOut.ts  TeamPoints.ts  TeamResponse.ts  TeamWithMembersOut.ts  UserCreate.ts  UserOut.ts  UserResponse.ts
frontend/src/api/services/: GameService.ts  PuzzleService.ts  TeamService.ts
frontend/src/components/: CountdownView.css  CountdownView.tsx  GameGridLayout.css  GameGridLayout.tsx  GameGridLayoutDemo.tsx  GameResultsView.tsx  GameSessionView.css  GameSessionView.tsx  Lobby.css  Lobby.tsx  MouseCursorOverlay.css  MouseCursorOverlay.tsx  PlayerQuadrant.css  PlayerQuadrant.tsx  ResultsView.css  ResultsView.tsx  TeamCoordinationView.css  TeamCoordinationView.tsx
frontend/src/components/__tests__/: GameGridLayout.test.tsx  MouseCursorOverlay.test.tsx
frontend/src/components/design-system/: Animations.css  Button.css  Button.tsx  Card.css  Card.tsx  Container.css  Container.tsx  DesignSystem.css  Input.css  Input.tsx  List.css  List.tsx  SectionTitle.css  SectionTitle.tsx  StatusMessage.css  StatusMessage.tsx  Typography.css  Typography.tsx  index.ts
frontend/src/components/puzzles/: ConcentrationPuzzle.css  ConcentrationPuzzle.tsx  MemoryPuzzle.tsx  MultipleChoicePuzzle.tsx  MultitaskingPuzzle.css  MultitaskingPuzzle.tsx  PuzzleRenderer.tsx  SpatialPuzzle.css  SpatialPuzzle.tsx  TextPuzzle.tsx
frontend/src/components/puzzles/__tests__/: ConcentrationPuzzle.integration.test.tsx  ConcentrationPuzzle.test.tsx  MemoryPuzzle.integration.test.tsx  MemoryPuzzle.test.tsx  MultitaskingPuzzle.integration.test.tsx  SpatialPuzzle.integration.test.tsx  SpatialPuzzle.test.tsx
frontend/src/hooks/: useColorAssignment.ts  useConcentrationGameState.ts  useCursorAssignment.ts  useGameLogic.ts  useMemoryGameState.ts  useMouseTracking.ts  useMultitaskingGameState.ts  useSpatialGameLoop.ts  useSpatialGameState.ts  useSpatialMouseHandling.ts
frontend/src/hooks/__tests__/: useColorAssignment.test.ts  useConcentrationGameState.test.ts  useCursorAssignment.test.ts  useMemoryGameState.test.ts  useMultitaskingGameState.test.ts  useSpatialGameState.test.ts
frontend/src/schemas/: index.ts
frontend/src/schemas/v1/: index.ts
frontend/src/schemas/v1/api/: index.ts  requests.ts  responses.ts
frontend/src/schemas/v1/core/: communication.ts  game.ts  index.ts  player.ts  puzzle.ts
frontend/src/schemas/v1/websocket/: index.ts  messages.ts
frontend/src/services/: colorAssignmentService.ts  concentrationPuzzleLogic.ts  gameRules.test.ts  gameRules.ts  gameWebSocket.ts  multitaskingPuzzleLogic.test.ts  multitaskingPuzzleLogic.ts  spatialPuzzleLogic.test.ts  spatialPuzzleLogic.ts
frontend/src/services/__tests__/: colorAssignmentService.test.ts  concentrationPuzzleLogic.test.ts  spatialPuzzleLogic.test.ts
frontend/src/types/: game.ts
frontend/src/utils/: cursorPositioning.ts  memoryPuzzleUtils.ts  multitaskingPuzzleUtils.ts
frontend/src/utils/__tests__/: cursorPositioning.test.ts  memoryPuzzleUtils.test.ts  multitaskingPuzzleUtils.test.ts
frontend/tests/: README.md  available-teams.spec.ts  basic-setup.spec.ts  game-flow.spec.ts  game-states.spec.ts
schemas/: README.md
schemas/api/v1/: requests.json  responses.json
schemas/core/v1/: communication.json  game.json  player.json  puzzle.json
schemas/generator/: README.md  generate_python.py  generate_typescript.py  validate_schemas.py
schemas/websocket/v1/: messages.json
